// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Menu.Item render with borderless props 1`] = `
<DocumentFragment>
  .cache-1lxfb9l-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4A4F62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4A4F62;
  border: 0;
  border-bottom: 1px solid #E6E9F0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  border: 0;
}

.cache-1lxfb9l-Item:hover,
.cache-1lxfb9l-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1lxfb9l-Item:hover,
.cache-1lxfb9l-Item:focus {
  color: #390171;
}

.cache-1lxfb9l-Item:hover svg,
.cache-1lxfb9l-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1lxfb9l-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1lxfb9l-Item"
    role="menuitem"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Borderless Props
    </div>
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with default props 1`] = `
<DocumentFragment>
  .cache-1amfcdq-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4A4F62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4A4F62;
  border: 0;
  border-bottom: 1px solid #E6E9F0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  color: #390171;
}

.cache-1amfcdq-Item:hover svg,
.cache-1amfcdq-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1amfcdq-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1amfcdq-Item"
    role="menuitem"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Default Props
    </div>
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with disabled props 1`] = `
<DocumentFragment>
  .cache-bwo6n0-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4A4F62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  cursor: default;
  pointer-events: none;
  color: #C4C9D6;
  background-color: #E6E9F0;
  border-color: #F6F6F8;
  box-shadow: none;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4A4F62;
  border: 0;
  border-bottom: 1px solid #E6E9F0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  cursor: not-allowed;
  color: #C4C9D6;
}

.cache-bwo6n0-Item:hover,
.cache-bwo6n0-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-bwo6n0-Item:hover,
.cache-bwo6n0-Item:focus {
  color: #390171;
}

.cache-bwo6n0-Item:hover svg,
.cache-bwo6n0-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-bwo6n0-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-bwo6n0-Item:hover,
.cache-bwo6n0-Item:focus {
  color: #151A2D;
  background-color: #FCFCFD;
}

.cache-bwo6n0-Item:hover svg,
.cache-bwo6n0-Item:focus svg {
  fill: #151A2D;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="true"
    class="em6gco80 cache-bwo6n0-Item"
    disabled=""
    role="menuitem"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Disabled Props
    </div>
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with variant danger 1`] = `
<DocumentFragment>
  .cache-oijt08-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4A4F62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4A4F62;
  border: 0;
  border-bottom: 1px solid #E6E9F0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  display: inline-block;
  color: #DD3252;
}

.cache-oijt08-Item:hover,
.cache-oijt08-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-oijt08-Item:hover,
.cache-oijt08-Item:focus {
  color: #390171;
}

.cache-oijt08-Item:hover svg,
.cache-oijt08-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-oijt08-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-oijt08-Item:hover,
.cache-oijt08-Item:focus {
  color: #A6102D;
}

.cache-oijt08-Item:hover svg,
.cache-oijt08-Item:focus svg {
  fill: #A6102D;
}

.cache-oijt08-Item svg {
  fill: #DD3252;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-oijt08-Item"
    role="menuitem"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Danger
    </div>
  </button>
</DocumentFragment>
`;

exports[`Menu Menu.Item render with variant nav 1`] = `
<DocumentFragment>
  .cache-12nvt64-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4A4F62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4A4F62;
  border: 0;
  border-bottom: 1px solid #E6E9F0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  font-size: 16px;
  line-height: 24px;
  color: #B2B6C3;
}

.cache-12nvt64-Item:hover,
.cache-12nvt64-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-12nvt64-Item:hover,
.cache-12nvt64-Item:focus {
  color: #390171;
}

.cache-12nvt64-Item:hover svg,
.cache-12nvt64-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-12nvt64-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-12nvt64-Item:hover,
.cache-12nvt64-Item:focus {
  color: #4F0599;
}

.cache-12nvt64-Item:hover svg,
.cache-12nvt64-Item:focus svg {
  fill: #4F0599;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<a
    aria-disabled="false"
    class="em6gco80 cache-12nvt64-Item"
    href="/test"
    role="menuitem"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Nav
    </div>
  </a>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-123ytwa-Popper {
  background-color: #FCFCFD;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4A4F62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 -1px 5px 3px rgba(246,246,248,0.15);
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-123ytwa-Popper:after {
  border-color: transparent;
}

.cache-123ytwa-Popper:before {
  border-color: transparent;
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  bottom: 100%;
}

.cache-123ytwa-Popper:after {
  border-bottom-color: #FFFFFF;
}

.cache-123ytwa-Popper:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-1amfcdq-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4A4F62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4A4F62;
  border: 0;
  border-bottom: 1px solid #E6E9F0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  color: #390171;
}

.cache-1amfcdq-Item:hover svg,
.cache-1amfcdq-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1amfcdq-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="bottom"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-123ytwa-Popper"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-1amfcdq-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          bottom
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom-end" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom-end"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-evfa20-Popper {
  background-color: #FCFCFD;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4A4F62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 -1px 5px 3px rgba(246,246,248,0.15);
}

.cache-evfa20-Popper:after,
.cache-evfa20-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-evfa20-Popper:after {
  border-color: transparent;
}

.cache-evfa20-Popper:before {
  border-color: transparent;
}

.cache-evfa20-Popper:after {
  margin-left: -9px;
  right: 24px;
}

.cache-evfa20-Popper:before {
  margin-left: -11px;
  right: 24px;
}

.cache-evfa20-Popper:after,
.cache-evfa20-Popper:before {
  bottom: 100%;
}

.cache-evfa20-Popper:after {
  border-bottom-color: #FFFFFF;
}

.cache-evfa20-Popper:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-evfa20-Popper:after,
.cache-evfa20-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-1amfcdq-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4A4F62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4A4F62;
  border: 0;
  border-bottom: 1px solid #E6E9F0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  color: #390171;
}

.cache-1amfcdq-Item:hover svg,
.cache-1amfcdq-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1amfcdq-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="bottom-end"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-evfa20-Popper"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-1amfcdq-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          bottom-end
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders "bottom-start" 1`] = `
<DocumentFragment>
  <button
    aria-controls="bottom-start"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-sa4tqx-Popper {
  background-color: #FCFCFD;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4A4F62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 -1px 5px 3px rgba(246,246,248,0.15);
}

.cache-sa4tqx-Popper:after,
.cache-sa4tqx-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-sa4tqx-Popper:after {
  border-color: transparent;
}

.cache-sa4tqx-Popper:before {
  border-color: transparent;
}

.cache-sa4tqx-Popper:after {
  margin-right: -9px;
  left: 24px;
}

.cache-sa4tqx-Popper:before {
  margin-right: -11px;
  left: 24px;
}

.cache-sa4tqx-Popper:after,
.cache-sa4tqx-Popper:before {
  bottom: 100%;
}

.cache-sa4tqx-Popper:after {
  border-bottom-color: #FFFFFF;
}

.cache-sa4tqx-Popper:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-sa4tqx-Popper:after,
.cache-sa4tqx-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-1amfcdq-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4A4F62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4A4F62;
  border: 0;
  border-bottom: 1px solid #E6E9F0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  color: #390171;
}

.cache-1amfcdq-Item:hover svg,
.cache-1amfcdq-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1amfcdq-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="bottom-start"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-sa4tqx-Popper"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-1amfcdq-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          bottom-start
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders "top" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-186h22f-Popper {
  background-color: #FCFCFD;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4A4F62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 1px 5px 3px rgba(246,246,248,0.15);
}

.cache-186h22f-Popper:after,
.cache-186h22f-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-186h22f-Popper:after {
  border-color: transparent;
}

.cache-186h22f-Popper:before {
  border-color: transparent;
}

.cache-186h22f-Popper:after,
.cache-186h22f-Popper:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-186h22f-Popper:after,
.cache-186h22f-Popper:before {
  top: 100%;
}

.cache-186h22f-Popper:after {
  border-top-color: #EEEEFF;
}

.cache-186h22f-Popper:before {
  border-top-color: rgba(165, 165, 205, 0.4);
}

.cache-186h22f-Popper:after,
.cache-186h22f-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-1amfcdq-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4A4F62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4A4F62;
  border: 0;
  border-bottom: 1px solid #E6E9F0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  color: #390171;
}

.cache-1amfcdq-Item:hover svg,
.cache-1amfcdq-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1amfcdq-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="top"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-186h22f-Popper"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-1amfcdq-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          top
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders "top-end" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top-end"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-18po98b-Popper {
  background-color: #FCFCFD;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4A4F62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 1px 5px 3px rgba(246,246,248,0.15);
}

.cache-18po98b-Popper:after,
.cache-18po98b-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-18po98b-Popper:after {
  border-color: transparent;
}

.cache-18po98b-Popper:before {
  border-color: transparent;
}

.cache-18po98b-Popper:after {
  margin-left: -9px;
  right: 24px;
}

.cache-18po98b-Popper:before {
  margin-left: -11px;
  right: 24px;
}

.cache-18po98b-Popper:after,
.cache-18po98b-Popper:before {
  top: 100%;
}

.cache-18po98b-Popper:after {
  border-top-color: #EEEEFF;
}

.cache-18po98b-Popper:before {
  border-top-color: rgba(165, 165, 205, 0.4);
}

.cache-18po98b-Popper:after,
.cache-18po98b-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-1amfcdq-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4A4F62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4A4F62;
  border: 0;
  border-bottom: 1px solid #E6E9F0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  color: #390171;
}

.cache-1amfcdq-Item:hover svg,
.cache-1amfcdq-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1amfcdq-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="top-end"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-18po98b-Popper"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-1amfcdq-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          top-end
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu placement renders "top-start" 1`] = `
<DocumentFragment>
  <button
    aria-controls="top-start"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-1qfqdcw-Popper {
  background-color: #FCFCFD;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4A4F62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 1px 5px 3px rgba(246,246,248,0.15);
}

.cache-1qfqdcw-Popper:after,
.cache-1qfqdcw-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-1qfqdcw-Popper:after {
  border-color: transparent;
}

.cache-1qfqdcw-Popper:before {
  border-color: transparent;
}

.cache-1qfqdcw-Popper:after {
  margin-right: -9px;
  left: 24px;
}

.cache-1qfqdcw-Popper:before {
  margin-right: -11px;
  left: 24px;
}

.cache-1qfqdcw-Popper:after,
.cache-1qfqdcw-Popper:before {
  top: 100%;
}

.cache-1qfqdcw-Popper:after {
  border-top-color: #EEEEFF;
}

.cache-1qfqdcw-Popper:before {
  border-top-color: rgba(165, 165, 205, 0.4);
}

.cache-1qfqdcw-Popper:after,
.cache-1qfqdcw-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-1amfcdq-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4A4F62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4A4F62;
  border: 0;
  border-bottom: 1px solid #E6E9F0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  color: #390171;
}

.cache-1amfcdq-Item:hover svg,
.cache-1amfcdq-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1amfcdq-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="top-start"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-1qfqdcw-Popper"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-1amfcdq-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          top-start
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.Item 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-123ytwa-Popper {
  background-color: #FCFCFD;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4A4F62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 -1px 5px 3px rgba(246,246,248,0.15);
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-123ytwa-Popper:after {
  border-color: transparent;
}

.cache-123ytwa-Popper:before {
  border-color: transparent;
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  bottom: 100%;
}

.cache-123ytwa-Popper:after {
  border-bottom-color: #FFFFFF;
}

.cache-123ytwa-Popper:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-1amfcdq-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4A4F62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4A4F62;
  border: 0;
  border-bottom: 1px solid #E6E9F0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  color: #390171;
}

.cache-1amfcdq-Item:hover svg,
.cache-1amfcdq-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1amfcdq-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="menu"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-123ytwa-Popper"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-1amfcdq-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          Menu.Item
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.ItemLink & Menu.Item disabled 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu-1"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-123ytwa-Popper {
  background-color: #FCFCFD;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4A4F62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 -1px 5px 3px rgba(246,246,248,0.15);
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-123ytwa-Popper:after {
  border-color: transparent;
}

.cache-123ytwa-Popper:before {
  border-color: transparent;
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  bottom: 100%;
}

.cache-123ytwa-Popper:after {
  border-bottom-color: #FFFFFF;
}

.cache-123ytwa-Popper:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-bwo6n0-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4A4F62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  cursor: default;
  pointer-events: none;
  color: #C4C9D6;
  background-color: #E6E9F0;
  border-color: #F6F6F8;
  box-shadow: none;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4A4F62;
  border: 0;
  border-bottom: 1px solid #E6E9F0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
  cursor: not-allowed;
  color: #C4C9D6;
}

.cache-bwo6n0-Item:hover,
.cache-bwo6n0-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-bwo6n0-Item:hover,
.cache-bwo6n0-Item:focus {
  color: #390171;
}

.cache-bwo6n0-Item:hover svg,
.cache-bwo6n0-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-bwo6n0-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-bwo6n0-Item:hover,
.cache-bwo6n0-Item:focus {
  color: #151A2D;
  background-color: #FCFCFD;
}

.cache-bwo6n0-Item:hover svg,
.cache-bwo6n0-Item:focus svg {
  fill: #151A2D;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="menu-1"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-123ytwa-Popper"
      role="menu"
    >
      <button
        aria-disabled="true"
        class="em6gco80 cache-bwo6n0-Item"
        disabled=""
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          Menu.Item disabled
        </div>
      </button>
      <button
        aria-disabled="true"
        class="em6gco80 cache-bwo6n0-Item"
        disabled=""
        role="menuitem"
        to="/link"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          Menu.Item Link disabled
        </div>
      </button>
      <button
        aria-disabled="true"
        class="em6gco80 cache-bwo6n0-Item"
        disabled=""
        href="https://link"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          Menu.Item Link disabled
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with Menu.ItemLink 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu-1"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-123ytwa-Popper {
  background-color: #FCFCFD;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4A4F62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 -1px 5px 3px rgba(246,246,248,0.15);
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-123ytwa-Popper:after {
  border-color: transparent;
}

.cache-123ytwa-Popper:before {
  border-color: transparent;
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  bottom: 100%;
}

.cache-123ytwa-Popper:after {
  border-bottom-color: #FFFFFF;
}

.cache-123ytwa-Popper:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-8j2909-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4A4F62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4A4F62;
  border: 0;
  border-bottom: 1px solid #E6E9F0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-8j2909-Item:hover,
.cache-8j2909-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-8j2909-Item:hover,
.cache-8j2909-Item:focus {
  color: #390171;
}

.cache-8j2909-Item:hover svg,
.cache-8j2909-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-8j2909-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="menu-1"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-123ytwa-Popper"
      role="menu"
    >
      <a
        aria-disabled="false"
        class="em6gco80 cache-8j2909-Item"
        href="/link"
        role="menuitem"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          Menu.Item as Link
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with modal={false} 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu-2"
    aria-expanded="true"
    aria-haspopup="dialog"
    type="button"
  >
    Menu
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

.cache-123ytwa-Popper {
  background-color: #FCFCFD;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #4A4F62;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 -1px 5px 3px rgba(246,246,248,0.15);
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-123ytwa-Popper:after {
  border-color: transparent;
}

.cache-123ytwa-Popper:before {
  border-color: transparent;
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  bottom: 100%;
}

.cache-123ytwa-Popper:after {
  border-bottom-color: #FFFFFF;
}

.cache-123ytwa-Popper:before {
  border-bottom-color: rgba(165, 165, 205, 0.4);
}

.cache-123ytwa-Popper:after,
.cache-123ytwa-Popper:before {
  left: 50%;
  right: inherit;
}

.cache-1amfcdq-Item {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4A4F62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: block;
  font-size: 14px;
  line-height: 22px;
  font-weight: inherit;
  padding: 4px 8px;
  color: #4A4F62;
  border: 0;
  border-bottom: 1px solid #E6E9F0;
  cursor: pointer;
  -webkit-transition: color 300ms;
  transition: color 300ms;
  min-width: 110px;
  background-color: transparent;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1amfcdq-Item:hover,
.cache-1amfcdq-Item:focus {
  color: #390171;
}

.cache-1amfcdq-Item:hover svg,
.cache-1amfcdq-Item:focus svg {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
  fill: #390171;
}

.cache-1amfcdq-Item:last-child {
  border-bottom: 0;
  border-radius: 0 0 4px 4px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    id="menu-2"
    name="menu"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  >
    <div
      class="cache-123ytwa-Popper"
      role="menu"
    >
      <button
        aria-disabled="false"
        class="em6gco80 cache-1amfcdq-Item"
        role="menuitem"
        type="button"
      >
        <div
          class="cache-115wth8 em6gco81"
        >
          MenuItem
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu renders with visible=false 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu"
    aria-expanded="false"
    aria-haspopup="dialog"
    type="button"
  >
    Menu is visible
  </button>
  .cache-shi5sg {
  border-radius: 4px;
  background-color: #fff;
  color: #000;
  fill: #fff;
  box-shadow: 0 2px 5px 5px rgba(165,165,205,0.3);
}

<div
    aria-label="menu"
    class="cache-shi5sg e1u0xa8a0"
    data-dialog="true"
    hidden=""
    id="menu"
    name="menu"
    role="dialog"
    style="display: none; position: fixed; left: 100%; top: 100%;"
    tabindex="-1"
  />
</DocumentFragment>
`;
